--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,11 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.18.4</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.18.4</version>
+        </dependency>
         <!-- PostgreSQL Driver -->
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -90,7 +94,8 @@
     </dependencies>
 
     <build>
-        <finalName>my-blog-back-app</finalName>
+        <!-- Меняем имя генерируемого war на ROOT для удаления контекстного пути -->
+        <finalName>ROOT</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -106,6 +111,9 @@
                             <version>1.18.42</version>
                         </path>
                     </annotationProcessorPaths>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
