--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,17 @@
-# Database configuration
-db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost:5432/blog_db
-db.username=postgres
-db.password=postgres
+# Spring Application
+spring.application.name=my-blog-back-app-four
 
+# Database configuration
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/blog_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+# JDBC
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.continue-on-error=true
+
+# Jackson
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.deserialization.fail-on-unknown-properties=false
